traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:17: error: unclosed string literal
  "a=1
  ^TraversalDiagonal:21: error: unclosed string literal
  counter = counter +1"
                      ^TraversalDiagonal:17: error: illegal start of statement
  "a=1
  ^TraversalDiagonal:21: error: ';' expected but something found.
  counter = counter +1"
                      ^